@@ -7,13 +7,15 @@ import com.cv.integration.repo.*;
 import com.cv.integration.service.ReportService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.PropertySource;
+import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Component;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Mono;
+import reactor.util.retry.Retry;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.*;
 
@@ -22,75 +24,41 @@ import java.util.*;
 @RequiredArgsConstructor
 @PropertySource("file:config/application.properties")
 public class HMSIntegration {
-    @Autowired
     private final AccountSettingRepo accountSetting;
-    @Autowired
     private final SaleHisRepo saleHisRepo;
-    @Autowired
     private final PurHisRepo purHisRepo;
-    @Autowired
     private final ReturnInRepo returnInRepo;
-    @Autowired
     private final ReturnOutRepo returnOutRepo;
-    @Autowired
     private final OPDHisRepo opdHisRepo;
-    @Autowired
     private final OTHisRepo otHisRepo;
-    @Autowired
     private final OTHisDetailRepo otHisDetailRepo;
-    @Autowired
     private final DCHisRepo dcHisRepo;
-    @Autowired
     private final DCHisDetailRepo dcHisDetailRepo;
-    @Autowired
     private final OPDHisDetailRepo opdHisDetailRepo;
-    @Autowired
     private final OPDReceiveRepo opdReceiveRepo;
-    @Autowired
     private final TraderRepo traderRepo;
-
-    @Autowired
     private final GenExpenseRepo genExpenseRepo;
-    @Autowired
     private final PaymentHisRepo paymentHisRepo;
-    @Autowired
     private final DCDoctorFeeRepo dcDoctorFeeRepo;
-    @Autowired
     private final OTDoctorFeeRepo otDoctorFeeRepo;
-    @Autowired
     private final TraderOpeningRepo traderOpeningRepo;
-    @Autowired
     private final OTServiceRepo otServiceRepo;
-    @Autowired
     private final DCServiceRepo dcServiceRepo;
-    @Autowired
     private final String packageId;
-    @Autowired
-    private OPDCategoryRepo opdCategoryRepo;
-    @Autowired
-    private DCGroupRepo dcGroupRepo;
-    @Autowired
-    private ReportService reportService;
-    @Autowired
+    private final OPDCategoryRepo opdCategoryRepo;
+    private final DCGroupRepo dcGroupRepo;
+    private final ReportService reportService;
     private final Map<String, AccountSetting> hmAccSetting;
-    @Autowired
     private final String dcDepositId;
-    @Autowired
     private final String dcDiscountId;
-    @Autowired
     private final String dcPaidId;
-    @Autowired
     private final String dcRefundId;
-    @Autowired
     private final String otDepositId;
-    @Autowired
     private final String otDiscountId;
-    @Autowired
     private final String otPaidId;
-    @Autowired
     private final String otRefundId;
-    @Autowired
-    private OTGroupRepo otGroupRepo;
+    private final OTGroupRepo otGroupRepo;
+    private final Environment environment;
     @Value("${upload.trader}")
     private String uploadTrader;
     @Value("${upload.sale}")
@@ -129,34 +97,32 @@ public class HMSIntegration {
     private final String APP_NAME = "CM";
     private final Integer MAC_ID = 99;
     private final String FOC = "FOC";
+    private final String CRD = "CRD";
     private final String ERR = "ERR";
-    @Autowired
-    private WebClient accountApi;
-    @Autowired
-    private UserRepo userRepo;
+    private final WebClient accountApi;
+    private final UserRepo userRepo;
 
     private void sendAccount(List<Gl> glList) {
         if (!glList.isEmpty()) {
-            Response response = accountApi.post().uri("/account/saveGlList")
+            accountApi.post().uri("/account/saveGlList")
                     .body(Mono.just(glList), List.class)
                     .retrieve()
                     .bodyToMono(Response.class)
-                    //.retryWhen(Retry.backoff(3, Duration.ofSeconds(10))
-                    //.maxBackoff(Duration.ofMinutes(1))) // Retry 3 times with a backoff of 10 seconds
-                    //.timeout(Duration.ofSeconds(1)) // Timeout after 5 minutes
-                    .onErrorResume(throwable -> {
-                        // Handle the error case when the server is down
-                        log.error("sendAccount: " + throwable.getMessage());
-                        String code = glList.get(0).getRefNo();
-                        String tranSource = glList.get(0).getTranSource();
+                    .retryWhen(Retry.backoff(Long.MAX_VALUE, Duration.ofSeconds(10))
+                            .maxBackoff(Duration.ofMinutes(5))
+                            .doAfterRetry(retrySignal -> log.error("Retrying..."))
+                    )
+                    .doOnError(e -> {
+                        log.error("sendAccount: " + e.getMessage());
+                        String code = glList.getFirst().getRefNo();
+                        String tranSource = glList.getFirst().getTranSource();
                         update(tranSource, code, null);
-                        return Mono.empty(); // Return an empty Mono or a default response
+                    }).doOnSuccess(response -> {
+                        String code = response.getVouNo();
+                        String tranSource = response.getTranSource();
+                        update(tranSource, code, ACK);
                     }).block();
-            if (response != null) {
-                String code = response.getVouNo();
-                String tranSource = response.getTranSource();
-                update(tranSource, code, ACK);
-            }
+
         }
     }
 
@@ -207,12 +173,19 @@ public class HMSIntegration {
             if (srcAcc != null) {
                 accountApi.post().uri("/account/deleteGlByAccount")
                         .body(Mono.just(gl), Gl.class).retrieve()
-                        .bodyToMono(String.class).subscribe((t) -> update(tranSource, vouNo, ACK), (e) -> log.info(e.getMessage()));
+                        .bodyToMono(String.class)
+                        .retryWhen(Retry.backoff(Long.MAX_VALUE, Duration.ofSeconds(10))
+                                .maxBackoff(Duration.ofMinutes(5))
+                                .doAfterRetry(retrySignal -> log.error("Retrying...")))
+                        .doOnSuccess(s -> update(tranSource, vouNo, isCashOnly() ? CRD : ACK)).block();
             } else {
                 accountApi.post().uri("/account/deleteGlByVoucher")
                         .body(Mono.just(gl), Gl.class)
                         .retrieve().bodyToMono(String.class)
-                        .subscribe((t) -> update(tranSource, vouNo, ACK), (e) -> log.info(e.getMessage()));
+                        .retryWhen(Retry.backoff(Long.MAX_VALUE, Duration.ofSeconds(10))
+                                .maxBackoff(Duration.ofMinutes(5))
+                                .doAfterRetry(retrySignal -> log.error("Retrying...")))
+                        .doOnSuccess(s -> update(tranSource, vouNo, isCashOnly() ? CRD : ACK)).block();
             }
         }
 
@@ -347,6 +320,10 @@ public class HMSIntegration {
         }
     }
 
+    private boolean isCashOnly() {
+        return Util1.getBoolean(environment.getProperty("cash.only"));
+    }
+
 
     public void sendSaleVoucherToAccount(SaleHis sh) {
         if (Util1.compareDate(sh.getVouDate(), syncDate)) {
@@ -404,27 +381,29 @@ public class HMSIntegration {
                         List<Gl> listGl = new ArrayList<>();
                         //income
                         if (vouBalAmt > 0) {
-                            Gl gl = new Gl();
-                            GlKey key = new GlKey();
-                            key.setDeptId(1);
-                            key.setCompCode(compCode);
-                            gl.setKey(key);
-                            gl.setGlDate(vouDate);
-                            gl.setDescription("Sale Voucher Total");
-                            gl.setSrcAccCode(srcAcc);
-                            gl.setDeptCode(deptCode);
-                            gl.setAccCode(balAcc);
-                            gl.setTraderCode(traderCode);
-                            gl.setCrAmt(vouTotalAmt);
-                            gl.setCurCode(curCode);
-                            gl.setReference(reference);
-                            gl.setCreatedDate(LocalDateTime.now());
-                            gl.setCreatedBy(APP_NAME);
-                            gl.setTranSource(tranSource);
-                            gl.setRefNo(vouNo);
-                            gl.setDeleted(deleted);
-                            gl.setMacId(MAC_ID);
-                            listGl.add(gl);
+                            if (!isCashOnly()) {
+                                Gl gl = new Gl();
+                                GlKey key = new GlKey();
+                                key.setDeptId(1);
+                                key.setCompCode(compCode);
+                                gl.setKey(key);
+                                gl.setGlDate(vouDate);
+                                gl.setDescription("Sale Voucher Total");
+                                gl.setSrcAccCode(srcAcc);
+                                gl.setDeptCode(deptCode);
+                                gl.setAccCode(balAcc);
+                                gl.setTraderCode(traderCode);
+                                gl.setCrAmt(vouTotalAmt);
+                                gl.setCurCode(curCode);
+                                gl.setReference(reference);
+                                gl.setCreatedDate(LocalDateTime.now());
+                                gl.setCreatedBy(APP_NAME);
+                                gl.setTranSource(tranSource);
+                                gl.setRefNo(vouNo);
+                                gl.setDeleted(deleted);
+                                gl.setMacId(MAC_ID);
+                                listGl.add(gl);
+                            }
                         }
                         //discount
                         if (vouDisAmt > 0) {
@@ -484,8 +463,6 @@ public class HMSIntegration {
                             sendAccount(listGl);
                         } else {
                             deleteGl(tranSource, vouNo, null, 2);
-                            saleHisRepo.updateSale(vouNo, FOC);
-                            log.info("FOC");
                         }
                     }
 
@@ -528,27 +505,29 @@ public class HMSIntegration {
                     List<Gl> listGl = new ArrayList<>();
                     //income
                     if (vouBalAmt > 0) {
-                        Gl gl = new Gl();
-                        GlKey key = new GlKey();
-                        key.setDeptId(1);
-                        key.setCompCode(compCode);
-                        gl.setKey(key);
-                        gl.setGlDate(vouDate);
-                        gl.setDescription("Purchase Voucher Total");
-                        gl.setSrcAccCode(srcAcc);
-                        gl.setAccCode(balAcc);
-                        gl.setTraderCode(traderCode);
-                        gl.setDrAmt(vouBalAmt);
-                        gl.setCurCode(curCode);
-                        gl.setReference(reference);
-                        gl.setDeptCode(deptCode);
-                        gl.setCreatedDate(LocalDateTime.now());
-                        gl.setCreatedBy(APP_NAME);
-                        gl.setTranSource(tranSource);
-                        gl.setRefNo(vouNo);
-                        gl.setDeleted(deleted);
-                        gl.setMacId(MAC_ID);
-                        listGl.add(gl);
+                        if (!isCashOnly()) {
+                            Gl gl = new Gl();
+                            GlKey key = new GlKey();
+                            key.setDeptId(1);
+                            key.setCompCode(compCode);
+                            gl.setKey(key);
+                            gl.setGlDate(vouDate);
+                            gl.setDescription("Purchase Voucher Total");
+                            gl.setSrcAccCode(srcAcc);
+                            gl.setAccCode(balAcc);
+                            gl.setTraderCode(traderCode);
+                            gl.setDrAmt(vouBalAmt);
+                            gl.setCurCode(curCode);
+                            gl.setReference(reference);
+                            gl.setDeptCode(deptCode);
+                            gl.setCreatedDate(LocalDateTime.now());
+                            gl.setCreatedBy(APP_NAME);
+                            gl.setTranSource(tranSource);
+                            gl.setRefNo(vouNo);
+                            gl.setDeleted(deleted);
+                            gl.setMacId(MAC_ID);
+                            listGl.add(gl);
+                        }
                     }
                     //payment
                     if (vouPaidAmt > 0) {
@@ -578,7 +557,6 @@ public class HMSIntegration {
                         sendAccount(listGl);
                     } else {
                         deleteGl(tranSource, vouNo, null, 2);
-                        purHisRepo.updatePurchase(vouNo, ACK);
                     }
                 } else {
                     log.error(String.format("%s Setting not assigned", tranSource));
@@ -641,27 +619,29 @@ public class HMSIntegration {
                     List<Gl> listGl = new ArrayList<>();
                     //income
                     if (vouBalAmt > 0) {
-                        Gl gl = new Gl();
-                        GlKey key = new GlKey();
-                        key.setDeptId(1);
-                        key.setCompCode(compCode);
-                        gl.setKey(key);
-                        gl.setGlDate(vouDate);
-                        gl.setDescription("Return In Voucher Total");
-                        gl.setSrcAccCode(srcAcc);
-                        gl.setAccCode(balAcc);
-                        gl.setTraderCode(traderCode);
-                        gl.setDrAmt(vouTotalAmt);
-                        gl.setCurCode(curCode);
-                        gl.setReference(reference);
-                        gl.setDeptCode(deptCode);
-                        gl.setCreatedDate(LocalDateTime.now());
-                        gl.setCreatedBy(APP_NAME);
-                        gl.setTranSource(tranSource);
-                        gl.setRefNo(vouNo);
-                        gl.setDeleted(deleted);
-                        gl.setMacId(MAC_ID);
-                        listGl.add(gl);
+                        if (!isCashOnly()) {
+                            Gl gl = new Gl();
+                            GlKey key = new GlKey();
+                            key.setDeptId(1);
+                            key.setCompCode(compCode);
+                            gl.setKey(key);
+                            gl.setGlDate(vouDate);
+                            gl.setDescription("Return In Voucher Total");
+                            gl.setSrcAccCode(srcAcc);
+                            gl.setAccCode(balAcc);
+                            gl.setTraderCode(traderCode);
+                            gl.setDrAmt(vouTotalAmt);
+                            gl.setCurCode(curCode);
+                            gl.setReference(reference);
+                            gl.setDeptCode(deptCode);
+                            gl.setCreatedDate(LocalDateTime.now());
+                            gl.setCreatedBy(APP_NAME);
+                            gl.setTranSource(tranSource);
+                            gl.setRefNo(vouNo);
+                            gl.setDeleted(deleted);
+                            gl.setMacId(MAC_ID);
+                            listGl.add(gl);
+                        }
                     }
                     //payment
                     if (vouPaidAmt > 0) {
@@ -687,8 +667,11 @@ public class HMSIntegration {
                         gl.setCash(true);
                         listGl.add(gl);
                     }
-                    if (!listGl.isEmpty()) sendAccount(listGl);
-
+                    if (!listGl.isEmpty()) {
+                        sendAccount(listGl);
+                    } else {
+                        deleteGl(tranSource, vouNo, null, 2);
+                    }
                 } else {
                     log.error(String.format("%s Setting not assigned", tranSource));
                 }
@@ -729,27 +712,29 @@ public class HMSIntegration {
                     List<Gl> listGl = new ArrayList<>();
                     //income
                     if (vouBalAmt > 0) {
-                        Gl gl = new Gl();
-                        GlKey key = new GlKey();
-                        key.setDeptId(1);
-                        key.setCompCode(compCode);
-                        gl.setKey(key);
-                        gl.setGlDate(vouDate);
-                        gl.setDescription("Return Out Voucher Total");
-                        gl.setSrcAccCode(srcAcc);
-                        gl.setAccCode(balAcc);
-                        gl.setTraderCode(traderCode);
-                        gl.setCrAmt(vouTotalAmt);
-                        gl.setCurCode(curCode);
-                        gl.setReference(reference);
-                        gl.setDeptCode(deptCode);
-                        gl.setCreatedDate(LocalDateTime.now());
-                        gl.setCreatedBy(APP_NAME);
-                        gl.setTranSource(tranSource);
-                        gl.setRefNo(vouNo);
-                        gl.setDeleted(deleted);
-                        gl.setMacId(MAC_ID);
-                        listGl.add(gl);
+                        if (!isCashOnly()) {
+                            Gl gl = new Gl();
+                            GlKey key = new GlKey();
+                            key.setDeptId(1);
+                            key.setCompCode(compCode);
+                            gl.setKey(key);
+                            gl.setGlDate(vouDate);
+                            gl.setDescription("Return Out Voucher Total");
+                            gl.setSrcAccCode(srcAcc);
+                            gl.setAccCode(balAcc);
+                            gl.setTraderCode(traderCode);
+                            gl.setCrAmt(vouTotalAmt);
+                            gl.setCurCode(curCode);
+                            gl.setReference(reference);
+                            gl.setDeptCode(deptCode);
+                            gl.setCreatedDate(LocalDateTime.now());
+                            gl.setCreatedBy(APP_NAME);
+                            gl.setTranSource(tranSource);
+                            gl.setRefNo(vouNo);
+                            gl.setDeleted(deleted);
+                            gl.setMacId(MAC_ID);
+                            listGl.add(gl);
+                        }
                     }
                     //payment
                     if (vouPaidAmt > 0) {
@@ -776,7 +761,7 @@ public class HMSIntegration {
                         listGl.add(gl);
                     }
                     if (!listGl.isEmpty()) sendAccount(listGl);
-
+                    else deleteGl(tranSource, vouNo, null, 2);
                 } else {
                     log.error(String.format("%s Setting not assigned", tranSource));
                 }
@@ -872,22 +857,6 @@ public class HMSIntegration {
                                 key.setCompCode(compCode);
                                 gl.setKey(key);
                                 gl.setDescription(serviceName);
-                                //cash
-                                gl.setAccCode(srcAcc);
-                                if (amount > 0) {
-                                    gl.setDrAmt(amount);
-                                } else {
-                                    gl.setDescription("Return : " + serviceName);
-                                    gl.setCrAmt(amount * -1);
-                                }
-                                if (paymentId == 1 && vouTotal == vouPaid) {
-                                    gl.setSrcAccCode(payAcc);
-                                    gl.setCash(true);
-                                } else {
-                                    //credit
-                                    gl.setTraderCode(traderCode);
-                                    gl.setSrcAccCode(balAcc);
-                                }
                                 gl.setGlDate(vouDate);
                                 gl.setRefNo(vouNo);
                                 gl.setDeptCode(Util1.isNull(deptCode, mainDept));
@@ -902,7 +871,26 @@ public class HMSIntegration {
                                 gl.setServiceId(serviceId);
                                 gl.setDoctorId(doctorId);
                                 gl.setPatientNo(patientNo);
-                                listGl.add(gl);
+                                //cash
+                                gl.setAccCode(srcAcc);
+                                if (amount > 0) {
+                                    gl.setDrAmt(amount);
+                                } else {
+                                    gl.setDescription("Return : " + serviceName);
+                                    gl.setCrAmt(amount * -1);
+                                }
+                                if (paymentId == 1 && vouTotal == vouPaid) {
+                                    gl.setSrcAccCode(payAcc);
+                                    gl.setCash(true);
+                                    listGl.add(gl);
+                                } else {
+                                    //credit
+                                    if (!isCashOnly()) {
+                                        gl.setTraderCode(traderCode);
+                                        gl.setSrcAccCode(balAcc);
+                                        listGl.add(gl);
+                                    }
+                                }
                                 //payable
                                 if (!Util1.isNullOrEmpty(payableAcc) && amount > 0) {
                                     String[] accounts = payableAcc.split(",");
@@ -1169,29 +1157,31 @@ public class HMSIntegration {
                         }
                         //paid
                         if (vouPaid != vouTotal) {
-                            Gl gl = new Gl();
-                            GlKey key = new GlKey();
-                            key.setDeptId(1);
-                            key.setCompCode(compCode);
-                            gl.setKey(key);
-                            gl.setSrcAccCode(payAcc);
-                            gl.setAccCode(balAcc);
-                            gl.setCash(true);
-                            gl.setGlDate(vouDate);
-                            gl.setDescription("OPD Partial Paid");
-                            gl.setDrAmt(vouPaid);
-                            gl.setCurCode(curCode);
-                            gl.setReference(reference);
-                            gl.setDeptCode(mainDept);
-                            gl.setCreatedDate(LocalDateTime.now());
-                            gl.setCreatedBy(APP_NAME);
-                            gl.setTranSource(tranSource);
-                            gl.setRefNo(vouNo);
-                            gl.setDeleted(deleted);
-                            gl.setMacId(MAC_ID);
-                            gl.setDoctorId(doctorId);
-                            gl.setPatientNo(patientNo);
-                            listGl.add(gl);
+                            if (vouPaid > 0) {
+                                Gl gl = new Gl();
+                                GlKey key = new GlKey();
+                                key.setDeptId(1);
+                                key.setCompCode(compCode);
+                                gl.setKey(key);
+                                gl.setSrcAccCode(payAcc);
+                                gl.setAccCode(balAcc);
+                                gl.setCash(true);
+                                gl.setGlDate(vouDate);
+                                gl.setDescription("OPD Partial Paid");
+                                gl.setDrAmt(vouPaid);
+                                gl.setCurCode(curCode);
+                                gl.setReference(reference);
+                                gl.setDeptCode(mainDept);
+                                gl.setCreatedDate(LocalDateTime.now());
+                                gl.setCreatedBy(APP_NAME);
+                                gl.setTranSource(tranSource);
+                                gl.setRefNo(vouNo);
+                                gl.setDeleted(deleted);
+                                gl.setMacId(MAC_ID);
+                                gl.setDoctorId(doctorId);
+                                gl.setPatientNo(patientNo);
+                                listGl.add(gl);
+                            }
                         }
                         if (!listGl.isEmpty()) {
                             sendAccount(listGl);
@@ -1201,10 +1191,7 @@ public class HMSIntegration {
                         }
                     } else {
                         deleteGl(tranSource, vouNo, null, 2);
-                        opdHisRepo.updateOPD(vouNo, ERR);
                     }
-
-
                 } else {
                     log.error(String.format("%s Setting not assigned", tranSource));
                 }
@@ -1296,15 +1283,6 @@ public class HMSIntegration {
                                 key.setDeptId(1);
                                 key.setCompCode(compCode);
                                 gl.setKey(key);
-                                //cash
-                                if (paymentId == 1) {
-                                    gl.setSrcAccCode(payAcc);
-                                    gl.setCash(true);
-                                } else {
-                                    //credit
-                                    gl.setSrcAccCode(balAcc);
-                                    gl.setTraderCode(traderCode);
-                                }
                                 gl.setGlDate(vouDate);
                                 gl.setAccCode(Util1.isNull(opdAcc, disAcc));
                                 gl.setCrAmt(amount);
@@ -1322,7 +1300,19 @@ public class HMSIntegration {
                                 gl.setServiceId(String.valueOf(serviceId));
                                 gl.setDoctorId(doctorId);
                                 gl.setPatientNo(patientNo);
-                                listGl.add(gl);
+                                //cash
+                                if (paymentId == 1) {
+                                    gl.setSrcAccCode(payAcc);
+                                    gl.setCash(true);
+                                    listGl.add(gl);
+                                } else {
+                                    if (!isCashOnly()) {
+                                        //credit
+                                        gl.setSrcAccCode(balAcc);
+                                        gl.setTraderCode(traderCode);
+                                        listGl.add(gl);
+                                    }
+                                }
                             } else if (serviceId == Util1.getInteger(otPaidId) || serviceId == Util1.getInteger(otDepositId)) {
                                 //paid or deposit
                                 //credit
@@ -1706,34 +1696,36 @@ public class HMSIntegration {
                                 gl.setPatientNo(patientNo);
                                 listGl.add(gl);
                             } else if (serviceId == Util1.getInteger(dcPaidId) || serviceId == Util1.getInteger(dcDepositId)) {
-                                //paid or deposit
-                                //credit
-                                Gl gl = new Gl();
-                                GlKey key = new GlKey();
-                                key.setDeptId(1);
-                                key.setCompCode(compCode);
-                                gl.setKey(key);
-                                gl.setGlDate(vouDate);
-                                gl.setSrcAccCode(Util1.isNull(accountCode, payAcc));
-                                gl.setAccCode(balAcc);
-                                gl.setDrAmt(amount);
-                                gl.setRefNo(vouNo);
-                                gl.setDeptCode(Util1.isNull(deptCode, mainDept));
-                                gl.setMacId(MAC_ID);
-                                gl.setCreatedBy(APP_NAME);
-                                gl.setCurCode(curCode);
-                                gl.setRefNo(vouNo);
-                                gl.setDescription(serviceName);
-                                gl.setCreatedDate(LocalDateTime.now());
-                                gl.setTranSource(tranSource);
-                                gl.setReference(reference);
-                                gl.setTraderCode(traderCode);
-                                gl.setDeleted(deleted);
-                                gl.setCash(true);
-                                gl.setServiceId(String.valueOf(serviceId));
-                                gl.setDoctorId(doctorId);
-                                gl.setPatientNo(patientNo);
-                                listGl.add(gl);
+                                if (amount > 0) {
+                                    //paid or deposit
+                                    //credit
+                                    Gl gl = new Gl();
+                                    GlKey key = new GlKey();
+                                    key.setDeptId(1);
+                                    key.setCompCode(compCode);
+                                    gl.setKey(key);
+                                    gl.setGlDate(vouDate);
+                                    gl.setSrcAccCode(Util1.isNull(accountCode, payAcc));
+                                    gl.setAccCode(balAcc);
+                                    gl.setDrAmt(amount);
+                                    gl.setRefNo(vouNo);
+                                    gl.setDeptCode(Util1.isNull(deptCode, mainDept));
+                                    gl.setMacId(MAC_ID);
+                                    gl.setCreatedBy(APP_NAME);
+                                    gl.setCurCode(curCode);
+                                    gl.setRefNo(vouNo);
+                                    gl.setDescription(serviceName);
+                                    gl.setCreatedDate(LocalDateTime.now());
+                                    gl.setTranSource(tranSource);
+                                    gl.setReference(reference);
+                                    gl.setTraderCode(traderCode);
+                                    gl.setDeleted(deleted);
+                                    gl.setCash(true);
+                                    gl.setServiceId(String.valueOf(serviceId));
+                                    gl.setDoctorId(doctorId);
+                                    gl.setPatientNo(patientNo);
+                                    listGl.add(gl);
+                                }
 
                             } else if (serviceId == Util1.getInteger(dcRefundId)) {
                                 //refund
@@ -1828,7 +1820,6 @@ public class HMSIntegration {
                                     gl.setMacId(MAC_ID);
                                     gl.setCreatedBy(APP_NAME);
                                     gl.setCurCode(curCode);
-                                    gl.setRefNo(vouNo);
                                     gl.setDescription(serviceName);
                                     gl.setCreatedDate(LocalDateTime.now());
                                     gl.setTranSource(tranSource);
@@ -1993,7 +1984,6 @@ public class HMSIntegration {
                         }
                         if (!listGl.isEmpty()) {
                             sendAccount(listGl);
-                            log.info(String.format("sendDCVoucherToAccount: %s", vouNo));
                         } else {
                             deleteGl(tranSource, vouNo, null, 2);
                             dcHisRepo.updateDC(vouNo, FOC);
@@ -2336,7 +2326,7 @@ public class HMSIntegration {
                 coa.setCreatedBy(APP_NAME);
                 coa.setCreatedDate(LocalDateTime.now());
                 coa.setMacId(MAC_ID);
-                coa.setOption("USR");
+                coa.setCoaOption("USR");
                 coa.setMigCode(String.valueOf(opd.getCatId()));
                 saveCOA(coa).doOnSuccess(s -> {
                     updateOPDCOA(s, ACK);
@@ -2379,7 +2369,7 @@ public class HMSIntegration {
                     coa.setCreatedBy(APP_NAME);
                     coa.setCreatedDate(LocalDateTime.now());
                     coa.setMacId(MAC_ID);
-                    coa.setOption("USR");
+                    coa.setCoaOption("USR");
                     coa.setMigCode(String.valueOf(groupId));
                     saveCOA(coa).doOnSuccess(s -> {
                         updateOTCOA(s, ACK);
@@ -2424,7 +2414,7 @@ public class HMSIntegration {
                     coa.setCreatedBy(APP_NAME);
                     coa.setCreatedDate(LocalDateTime.now());
                     coa.setMacId(MAC_ID);
-                    coa.setOption("USR");
+                    coa.setCoaOption("USR");
                     coa.setMigCode(String.valueOf(dc.getGroupId()));
                     saveCOA(coa).doOnSuccess(s -> updateDCCOA(s, ACK)).block();
                     log.info(String.format("sendDCGroup: %s", dc.getGroupName()));
